syntax = "proto3";

service Scheduler {
    rpc SaveUrl (Url) returns (Ack);
    rpc ListSnapshots (Url) returns (SnapshotList);

    rpc RegisterWorker (Endpoint) returns (Ack);
    rpc RegisterStorage (Endpoint) returns (Ack);
}

message Url {
    string url = 1;
}

message Snapshot {
    bytes uuid = 2;
    bytes hash = 3;
    string storage_url = 4;
}

message SnapshotList {
    repeated Snapshot snapshots = 5;
}

message Endpoint {
    string addr = 7;
    uint32 port = 8;
}

message Ack {
    int32 status_code = 6;
    string message = 10;
}
